package communication;

import "physbam_vector_2d.proto";
import "physbam_grid_2d.proto";
import "physbam_face_array_2d.proto";

message AppFaceArray2d {

    // size of the grid/ data
    optional int32 size = 1;

    // message mac grid
    optional PhysbamGrid2d mac_grid = 2;

    // message face_velocities
    optional PhysbamFaceArray2d face_velocities = 3;
}
